@@ -7,6 +7,7 @@ Changes in progress
 ---------------------------------------------------------------------------------------
 - Upgraded Moodle from v3.6.5 to v3.6.6
 - Re-added Catalonia to countries list
+- Made exception for FRM environment to put cache files in moodledata
 - Marsupial: Updated components
 - Upgraded all wiris plugins
 - Upgraded module clickedu
